fixed dark mode text

--- a/styles.css
+++ b/styles.css
@@ -109,8 +109,8 @@ h2 {
 }
 
 .dark-note {
-    padding-right: 4.5rem;
-    padding-left: 85rem;
+    padding-right: 5%;
+    padding-left: 90%;
     text-align: right;
     margin-top: 0.3rem;
     position: absolute;
